change java version to 17